# htmx-axum-todo

./: .env.sample  Cargo.toml
assets/: index.html  style.css
migrations/: 20231128152255_init.down.sql  20231128152255_init.up.sql  20231128155256_rename_todo_table.down.sql  20231128155256_rename_todo_table.up.sql  20231128213540_add_done_date.down.sql  20231128213540_add_done_date.up.sql
src/: main.rs  templates.rs
templates/: edit-todo.html  error-modal.html  index.html  list-item.html  success-modal.html  todo.html  validate-todo.html
